# zenml-enterprise-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEMO_READY.md  LICENSE  Makefile  PLAN.md  README.md  README_DEMO.md  build.py  export_path.txt  mlflow.db  pyproject.toml  requirements-aws.txt  requirements-azure.txt  requirements-gcp.txt  requirements.txt  run.py  run2.py  training_report.md  uv.toml
.github/workflows/: batch-inference.yml  promote-production.yml  test-batch-inference.yml  train-staging.yml
configs/: README.md  batch_inference_local.yaml  batch_inference_production.yaml  batch_inference_staging.yaml  champion_challenger_local.yaml  champion_challenger_production.yaml  champion_challenger_staging.yaml  deployment_config.yaml  local.yaml  model_config.yaml  production.yaml  staging.yaml  training_production.yaml  training_staging.yaml
demo/: README.md  __init__.py  run_demo.py  workspace_utils.py
demo/chapters/: __init__.py  chapter_1_training.py  chapter_2_model_control_plane.py  chapter_2_staging_training.py  chapter_3_champion_challenger.py  chapter_3_promote_staging.py  chapter_4_champion_challenger.py  chapter_4_promote_staging.py  chapter_5_promote_production.py  chapter_6_batch_inference.py
demo/enterprise-stack/: README.md  TALKING_POINTS.md
design/review-reports/: FIXES_SUMMARY.md  feature-searchpipelineagent-review.md  full-repo-review.md
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  PLAN-2-WORKSPACE-ARCHITECTURE.md  PLATFORM_GUIDE.md  PRO_FEATURES.md
governance/: README.md
governance/docker/: Dockerfile.base  README.md  __init__.py  docker_settings.py
governance/hooks/: __init__.py  alerting_hook.py  compliance_hook.py  monitoring_hook.py
governance/materializers/: dataframe_materializer.py
governance/stacks/: register_stack.py
governance/stacks/terraform/: .gitignore  README.md  deploy.sh
governance/stacks/terraform/environments/development/gcp/: main.tf  terraform.tfvars.example  tfplan  variables.tf
governance/stacks/terraform/environments/production/aws/: main.tf  terraform.tfvars.example  variables.tf
governance/stacks/terraform/environments/production/gcp/: main.tf  terraform.tfvars.example  variables.tf
governance/stacks/terraform/environments/production/gcp-airflow/: main.tf  terraform.tfvars.example  variables.tf
governance/stacks/terraform/environments/staging/aws/: main.tf  terraform.tfvars.example  variables.tf
governance/stacks/terraform/environments/staging/gcp/: main.tf  terraform.tfvars.example  variables.tf
governance/stacks/terraform/shared/gcp/: artifact_store.tf  main.tf  terraform.tfvars.example  variables.tf
governance/steps/: __init__.py  data_validation.py  drift_alert.py  drift_detection.py  model_validation.py  simulate_drift.py  training_report.py
notebooks/: README.md  lineage_demo.ipynb  promotion_rollback_demo.ipynb
platform/: __init__.py
platform/hooks/: __init__.py  mlflow_hook.py
platform/steps/: __init__.py  data_validation.py
scripts/: build_snapshot.py  generate_training_report.py  promote_cross_workspace.py  promote_model.py  rollback_model.py  setup_local.sh  setup_stacks.sh  use-workspace.sh
src/: __init__.py
src/pipelines/: __init__.py  batch_inference.py  champion_challenger.py  import_model.py  promotion.py  realtime_inference.py  training.py
src/steps/: __init__.py  data_loader.py  feature_engineering.py  model_evaluator.py  model_trainer.py  predictor.py
src/utils/: __init__.py  mlflow_utils.py
tests/: __init__.py  conftest.py  test_docker_settings.py  test_imports.py  test_promotion_logic.py  test_steps.py
