[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenml-enterprise-mlops"
version = "0.1.0"
description = "Enterprise MLOps template showcasing ZenML best practices for regulated industries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ZenML GmbH", email = "info@zenml.io"},
]
keywords = [
    "mlops",
    "machine-learning",
    "production-ml",
    "model-deployment",
    "governance",
    "zenml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "zenml[server]>=0.92.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "evidently>=0.4.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

# Optional dependencies for dynamic pipelines
dynamic = [
    "imbalanced-learn>=0.11.0",  # For SMOTE resampling
]

# Cloud provider integrations (install as needed)
gcp = [
    "zenml[gcp]",
]
aws = [
    "zenml[aws]",
]
azure = [
    "zenml[azure]",
]

[project.urls]
Homepage = "https://github.com/zenml-io/zenml-enterprise-mlops"
Documentation = "https://docs.zenml.io"
Repository = "https://github.com/zenml-io/zenml-enterprise-mlops"
"Bug Tracker" = "https://github.com/zenml-io/zenml-enterprise-mlops/issues"

[project.scripts]
zenml-run = "run:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "governance"]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs",
    "notebooks",
    ".github",
    "mlruns",
    "mlartifacts",
]

# Ruff configuration - using Astral's latest and greatest
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".uv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".zen",
    ".zenml",
    "mlruns",
    "mlartifacts",
]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade - modernize syntax
    "B",      # flake8-bugbear - common bugs
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking - move imports to TYPE_CHECKING
    "RUF",    # Ruff-specific rules
    # Security
    "S",      # flake8-bandit - security
    # Performance
    "PERF",   # perflint - performance anti-patterns
    # Modern Python
    "PTH",    # flake8-use-pathlib
    "FURB",   # refurb - modernization
    # Code quality
    "PL",     # pylint subset (C, E, R, W)
    "PIE",    # flake8-pie - misc lints
    "T20",    # flake8-print
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "C90",    # mccabe complexity
    # Docstrings (optional - enable if you want)
    # "D",    # pydocstyle
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI/ZenML patterns)
    "C901",    # complexity (ML code can be complex)
    "PLR0913", # too many arguments (ML functions often need many params)
    "PLR2004", # magic values (common in ML thresholds)
    "S101",    # assert usage (fine in non-production code)
    "S603",    # subprocess without shell=True validation (handled case by case)
    "S607",    # partial executable path (CLI tools)
    # ML naming conventions (X, X_train, etc.)
    "N803",    # argument name should be lowercase
    "N806",    # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused and star imports
"scripts/*.py" = ["T201", "T203", "G004", "PLC0415", "RUF001"]  # Allow print, f-string logging, conditional imports
"run.py" = ["G004", "PLC0415"]  # Allow f-string logging, conditional imports in CLI
"notebooks/**/*.py" = ["T201", "E402", "F401"]  # Allow prints, late imports, unused imports
"*.ipynb" = ["T201", "E402", "F401", "B018", "RUF001"]  # Jupyter specific
"src/**/*.py" = ["G004", "PLC0415"]  # Allow f-string logging, conditional imports
"governance/**/*.py" = ["G004", "PLR0912", "PLR0915", "PLC0415", "UP006", "UP035", "PTH118"]  # Allow f-string logging, complex functions, typing compat
"tests/**/*.py" = ["S101", "PLR2004", "PLR0124", "PLC0415", "D"]  # Allow asserts, magic values, self-compare, local imports

[tool.ruff.lint.isort]
known-first-party = ["src", "governance"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "zenml.steps.BaseStep"]

[tool.ruff.lint.pylint]
max-args = 10  # ML functions often need many parameters
max-branches = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src", "governance"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv.sources]
zenml-enterprise-mlops = { workspace = true }

[dependency-groups]
dev = [
    "zenml-enterprise-mlops[dev]",
]
